[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Interface/ObjectivesBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Interface/Interface.gd" type="Script" id=3]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InterfaceLayout" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CounterContainer" type="Container" parent="InterfaceLayout"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectivesBar" parent="InterfaceLayout" instance=ExtResource( 2 )]
margin_right = 0.0
margin_bottom = 70.0
script = null
